--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,8 @@ $inputPlaceholderColor: rgba(249, 157, 157, 1);
 $loginWithAccountsTextColor:  #F8C2C2;
 $inputTextColor:#F99D9D;
 $forgetHoverColor: #000000;
+$linkshover:#de8a86;
+$accent:#fcbdbd;
 
 
 
@@ -59,6 +61,10 @@ $forgetHoverColor: #000000;
     padding: 0;
     box-sizing: border-box;
   }
+  .home{
+    background-image: url("/files/background.jpg");
+    background-position: center;
+  }
   body {
     background: linear-gradient(to right, $gradientColor1, $gradeintColor2);
     height: 100vh;
@@ -92,13 +98,51 @@ $forgetHoverColor: #000000;
       color: $inputPlaceholderColor;
     }
   }
+  // MAIN PAGE
+  .home .main_container{
+    height:100%;
+    display:grid;
+      .navbar{
+      grid-column: 2 / span 6;
+      nav{
+        display: flex;
+        align-items: center;
+        height: 120px;
+        .logo{
+          margin-left: 50px;
+          margin-top: 30px;
+        }
+        .links{
+          margin-left: auto;
+          a{
+            margin-left: 100px;
+            @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
+          }
+          .button_med{
+            margin-right: 15px;
+            padding: 10px 50px;
+            @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
+          }
+ 
+        }
+      }
+    }
+   
   
-  .navbar {
-    @include enableFlex();
-    height: 80%;
-    margin-bottom: 0.8rem;
+  .info{
+    grid-column: 2 / span 2;
+    margin-left: 1400px;
+    margin-top: 100px;
+    .hero_font {
+      color: $formBackgroundColor;
+      font-weight: 800;
+      font-size: 4.375rem;
+    }
   }
-  
+  }
+
+
+  // LOGIN PAGE
   .container {
     height: 75vh;
     width: 60vw;
@@ -136,10 +180,68 @@ $forgetHoverColor: #000000;
       }
     }
   }
+  // Registration page and edit_user_page
+  .container_registration {
+    height: 75vh;
+    width: 60vw;
+    background-color: $formBackgroundColor;
+    @include enableFlex(true);
+    .title{
+      font-size: large;
+      margin-top: 5rem;
+   }
+   .form{
+     height: 60%;
+    @include enableFlex(true);
+  
+  .user-details{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    .input-box{
+      margin: auto;
+      width: 370px;
+     .details{
+       font-weight: 500;
+       margin-bottom: 5px;
+     }
+     .input{
+       height: 45px;
+       width: 120%;
+     }
+    }
+
+
+  }
+}
+    .section-two {
+      height: 40%;
+      @include enableFlex();
+      button {
+        @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
+      }
+    }
+  }
+
 
   
   
 
+@media screen and (max-width: 650px) {
+  .logo{
+    height: 1rem;
+  }
+  .a .button_med{
+    width: 15rem;
+  }
+  .info{
+    grid-column: 2 / span 6;
+    .hero_font{
+      font-size: 2.1875rem;
+    }
+  }
+  
+}
   
 @media only screen and (max-width: 768px) {
     .container {
@@ -152,6 +254,26 @@ $forgetHoverColor: #000000;
           button {
             width: 15rem;
           }
+        }
+      }
+      .section-two {
+        button {
+          width: 15rem;
+        }
+      }
+    }
+    .container_registration{
+      height: 35rem;
+      .form{
+        .user-details{
+          overflow-y: scroll;
+          .input-box{
+            width: 15rem;
+            .input{
+              width: 15rem;
+            }
+          }
+         
         }
       }
       .section-two {
