--- a/css/style.scss
+++ b/css/style.scss
@@ -62,7 +62,7 @@ $accent:#fcbdbd;
     box-sizing: border-box;
   }
   .home{
-    background-image: url("/files/background.jpg");
+    background-image: url("files/background.jpg");
     background-position: center;
   }
   body {
