--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .home {
-  background-image: url("/files/background.jpg");
+  background-image: url("..files/background.jpg");
   background-position: center;
 }
 
