--- a/css/style.scss
+++ b/css/style.scss
@@ -64,7 +64,7 @@ $accent:#fcbdbd;
 
   
   .home{
-    background-image: url("..files/background.jpg");
+    background-image: url("../files/background.jpg");
     background-position: center;
   }
   body {
