--- a/web-test/src/style.scss
+++ b/web-test/src/style.scss
@@ -63,10 +63,6 @@ $accent:#fcbdbd;
   }
 
   
-  .home{
-    background-image: url("../files/background.jpg");
-    background-position: center;
-  }
   body {
     background: linear-gradient(to right, $gradientColor1, $gradeintColor2);
     height: 100vh;
@@ -101,46 +97,46 @@ $accent:#fcbdbd;
     }
   }
   // MAIN PAGE
-  .home .main_container{
-    height:100%;
-    display:grid;
-      .navbar{
-      grid-column: 2 / span 6;
-      nav{
-        display: flex;
-        align-items: center;
-        height: 120px;
-        .logo{
-          margin-left: 50px;
-          margin-top: 30px;
+  .home{
+    background-image: url("./files/background.jpg");
+    height: 100vh;
+    width: 100vw;
+    nav{
+      display: flex;
+      .logo{
+        margin-left: 40px;
+        margin-top: 30px;
+      }
+      .links{
+        margin-left: auto;
+        margin-top: 50px;
+
+        // .button{
+        //   margin-left: 100px;
+        //   @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
+        // }
+        .search_ads{
+          margin-right: 30px;
+          @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
         }
-        .links{
-          margin-left: auto;
-          a{
-            margin-left: 100px;
-            @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
-          }
-          .button_med{
-            margin-right: 15px;
-            padding: 10px 50px;
-            @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
-          }
- 
+        .button_med{
+          margin-right: 15px;
+          padding: 10px 50px;
+          @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
         }
+
+
       }
     }
-   
-  
-  .info{
-    grid-column: 2 / span 2;
-    margin-left: 1400px;
-    margin-top: 100px;
-    .hero_font {
-      color: $formBackgroundColor;
-      font-weight: 800;
-      font-size: 4.375rem;
+    .info{
+      margin-left: 1400px;
+      margin-top:250px;
+      .hero_font {
+        color: $formBackgroundColor;
+        font-weight: 800;
+        font-size: 4.375rem;
+      }
     }
-  }
   }
 
 
