--- a/web-test/src/style.scss
+++ b/web-test/src/style.scss
@@ -69,7 +69,7 @@ $accent:#fcbdbd;
     width: 100vw;
     @include enableFlex();
   }
-  input {
+    input {
     padding: 0.8rem 1rem;
     width: 22rem;
     border-radius: 0.2rem;
@@ -83,19 +83,6 @@ $accent:#fcbdbd;
     }
   }
 
-  input {
-    padding: 0.8rem 1rem;
-    width: 22rem;
-    border-radius: 0.2rem;
-    border: $pinkOutline 0.01rem solid;
-    color: $inputTextColor;
-    background-color: $inputBackgroundColor;
-    margin-bottom: 0.8rem;
-    font-size: large;
-    &::placeholder {
-      color: $inputPlaceholderColor;
-    }
-  }
   // MAIN PAGE
   .home{
     background-image: url("./files/background.jpg");
@@ -104,25 +91,37 @@ $accent:#fcbdbd;
     nav{
       display: flex;
       .logo{
-        margin-left: 40px;
+        margin-left: 50px;
         margin-top: 30px;
       }
       .links{
-        margin-left: auto;
+       margin-left: auto;
         margin-top: 50px;
-
-        // .button{
-        //   margin-left: 100px;
-        //   @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
-        // }
+  
         .search_ads{
-          margin-right: 30px;
+          margin-right: 100px;
           @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
         }
+       
         .button_med{
-          margin-right: 15px;
-          padding: 10px 50px;
-          @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
+
+          margin-right: 100px;
+          padding: 0.8rem 1.5rem;
+          width: 10rem;
+          border-radius: 0.2rem;
+          outline: none;
+          border: none;
+          font-size: medium;
+          background-color: $newAccountButtonColor;
+          color: $newAccountButtonTextColor;
+          cursor: pointer;
+          transition: background 0.5s;
+          &:hover {
+            background: darken($newAccountButtonColor, 20%)
+              radial-gradient(circle, transparent 1%, darken($newAccountButtonColor, 20%) 1%)
+              center/15000%;
+          }
+          
         }
 
 
@@ -220,38 +219,198 @@ $accent:#fcbdbd;
       }
     }
     .section-three{
+      
       height: 20%;
       @include enableFlex();
+      .space {
+        width: 30px;
+        height: auto;
+        display: inline-block;
+      }
+      
         button {
           justify-content: space-between;
           @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
         }
     
     }
-    .section-four{
-      height: 20%;
-      @include enableFlex();
-      
-      button {
-        @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
-      }
-    }
 }
 
+// create ad page
+.container-ads{
+  height: 80vh;
+  width: 70vw;
+  background-color: $formBackgroundColor;
+  @include enableFlex(true);
+  .title{
+    display: flex;
+    font-size: large;
+    margin-bottom: 10px;
+    
+  }
+  
+  form{
+    .ads-details{
+      
+      .section-one{
+        
+        .input-box{
+          margin-left: 70px;
 
 
+          .details{
+            margin-right: 42px;
+            padding-right: 10px;
+            
+          }
+          .detailsId{
+            margin-right: 62px;
+            padding-right: 10px;
+            
+          }
+          
+          .details2{
+            margin-right: 27px;
+          }
+          }
+          .selector{
+            margin-left: 65px;
+            margin-bottom: 10px;
+            .currency {
+              margin-left: 29px;
+              padding: 0.8rem 1rem;
+              width: 22rem;
+              border: 0.01rem solid $pinkOutline;
+              color: $inputTextColor;
+              background-color: $inputBackgroundColor;
+              border-radius: 0.2rem;
+              margin-bottom: 0.8rem;
+              resize: vertical;
+              margin-top: 15px;
+            }
+          
+
+      }
+    }
+      .section-two{
+        
+        .input-text{
+          .info {
+          width: 100%;
+          height: 200px;
+          padding: 12px 20px;
+          box-sizing: border-box;
+          border: 2px solid $pinkOutline;
+          border-radius: 4px;
+          background-color: $inputBackgroundColor;
+          resize: none;
+
+          
+        
+      }
+        
+      }
+    }
+      .section-three {
+        margin-top: 50px;
+        @include enableFlex();
+        button {
+          @include buttonStyles($newAccountButtonColor, $newAccountButtonTextColor);
+        }
+      }
+
+    }
+    }
   
+}
+// show user ads
+.adscontainer{
+  overflow-y: scroll;
+  height: 45rem;
+  width: 70vw;
   
+  .title{
+    margin-left: 20px;
+    color: $gradeintColor2;
+    .space {
+      width: 30px;
+      height: auto;
+      display: inline-block;
+    }
+  }
+.ads-container{
+  width: 60vw;
+  display: block;
+  margin-left: 20px;
+  border: 2px solid $pinkOutline;
+  background-color: $formBackgroundColor;
+  border-radius: 20px;
+  padding: 0.8rem 1rem;
+  margin-bottom: 0.8rem;
+  box-shadow: 5px 5px;
+  .space {
+    width: 50px;
+    height: auto;
+    display: inline-block;
+  }
+  button {
+    // padding: 5px;
+    margin-left: 400px;
+    font-size: 15px;
+    color: $newAccountButtonTextColor;
+    background-color: $newAccountButtonColor;
+    margin-bottom: 0.8rem;
+    width: 10rem;
+    height: 2rem;
+    border: $pinkOutline 0.01rem solid;
+
+   
+   
+   
+  }
+  button:hover {
+    background-color: $gradeintColor2;
+    color: #000000;
+  }
+
+}
+}
+  
+.topnav {
+  margin-bottom: 40px;
+  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+
+  a {
+    float: left;
+    color: $forgetHoverColor;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  a:hover {
+    background-color: $inputBackgroundColor;
+    color: $gradeintColor2;
+  }
+  
+}
 
 @media screen and (max-width: 650px) {
   .logo{
     height: 1rem;
+    size: 1rem;
   }
-  .a .button_med{
-    width: 15rem;
+  .a  .search_ads .button_med{
+
+    width: 5rem;
   }
   .info{
-    grid-column: 2 / span 6;
+    margin-left: 10px;
     .hero_font{
       font-size: 2.1875rem;
     }
@@ -260,6 +419,24 @@ $accent:#fcbdbd;
 }
   
 @media only screen and (max-width: 1175px) {
+
+    .container-ads{
+      height: 35rem;
+      .form {
+        input {
+          width: 15rem;
+        }
+        .currency{
+          width: 15rem;
+        }
+        
+      }
+      .section-three{
+        button{
+          width: 10rem;
+        }
+      }
+    }
     .container {
       height: 35rem;
       .section-one {
@@ -302,11 +479,9 @@ $accent:#fcbdbd;
           width:10rem;
         }
       }
-      .section-four{
-        button{
-          width:10rem;
-        }
-      }
+    }
+    .adscontainer{
+      height: 35rem;
+      overflow-y: scroll;
     }
   }
-  
