--- a/web-test/src/style.scss
+++ b/web-test/src/style.scss
@@ -86,6 +86,8 @@ $accent:#fcbdbd;
   // MAIN PAGE
   .home{
     background-image: url("./files/background.jpg");
+    background-size:contain;
+    background-position:center;
     height: 100vh;
     width: 100vw;
     nav{
@@ -401,6 +403,8 @@ $accent:#fcbdbd;
 }
 
 @media screen and (max-width: 650px) {
+ 
+
   .logo{
     height: 1rem;
     size: 1rem;
@@ -415,8 +419,41 @@ $accent:#fcbdbd;
       font-size: 2.1875rem;
     }
   }
-  
+  .button_med{
+    width: 5rem;
+  }
+
+  .container_registration{
+    height: 25rem;
+    .form{
+      .user-details{
+        overflow-y: scroll;
+        .input-box{
+          width: 5rem;
+          .input{
+            width: 5rem;
+          }
+        }
+       
+      }
+    }
+    .section-two {
+      button {
+        width: 5rem;
+      }
+    }
+    .section-three{
+      button{
+        width:5rem;
+      }
+    }
+  }
+  .adscontainer{
+    height: 35rem;
+    overflow-y: scroll;
+  }
 }
+  
   
 @media only screen and (max-width: 1175px) {
 
